package src.main.java.org.example.jurasicparkke.Dinosaurios;

// Herbivoro.java
public class Herbivoro extends Dinosaurio {
    public Herbivoro(String nombre, int edad) {
        super(nombre, edad);
    }

    @Override
    public void alimentar() {
        // Lógica específica para herbívoros
    }

    @Override
    public void monitorearSalud() {
        // Lógica específica para herbívoros
    }
}
