package src.main.java.org.example.jurasicparkke.Dinosaurios;

// Omnivoro.java
public class Omnivoro extends Dinosaurio {
    public Omnivoro(String nombre, int edad) {
        super(nombre, edad);
    }

    @Override
    public void alimentar() {
        // Lógica específica para omnívoros
    }

    @Override
    public void monitorearSalud() {
        // Lógica específica para omnívoros
    }
}
